# crypto-tee-core

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASE_NOTES.md  REMAINING_TASKS.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md  SECURITY_IMPROVEMENTS_TASKS.md  deny.toml  run-ci-checks.sh  rust-toolchain.toml  test-results-summary.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: CNAME  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: benchmark-baseline.yml  ci.yml  cross-platform.yml  quality.yml  release.yml  security.yml
benches/: README.md
crypto-tee/: Cargo.toml  README.md
crypto-tee-platform/: Cargo.toml  README.md
crypto-tee-platform/src/: error.rs  fallback.rs  lib.rs  tests.rs  traits.rs  types.rs
crypto-tee-platform/src/android/: biometric.rs  mod.rs  system_properties.rs
crypto-tee-platform/src/ios/: local_authentication.rs  mod.rs  system_info.rs
crypto-tee-platform/src/linux/: mod.rs  system_info.rs
crypto-tee-rfc9421/: Cargo.toml  README.md
crypto-tee-rfc9421/examples/: basic_signing.rs
crypto-tee-rfc9421/src/: adapter.rs  error.rs  lib.rs  types.rs
crypto-tee-rfc9421/tests/: hardware_rfc9421_tests.rs  integration_tests.rs
crypto-tee-vendor/: Cargo.toml  README.md
crypto-tee-vendor/android/: CMakeLists.txt  build.gradle
crypto-tee-vendor/benches/: cache_optimization.rs
crypto-tee-vendor/examples/: android_knox_integration.rs  android_qsee_integration.kt  ios_secure_enclave_integration.swift  performance_demo.rs
crypto-tee-vendor/src/: cache.rs  error.rs  lib.rs  optimized.rs  traits.rs  types.rs
crypto-tee-vendor/src/apple/: README.md  biometric.rs  cryptokit_bridge.rs  keychain.rs  mod.rs  secure_enclave.rs  secure_enclave_bridge.rs  stub.rs
crypto-tee-vendor/src/mock/: mod.rs  optimized.rs
crypto-tee-vendor/src/optimized/: cache.rs
crypto-tee-vendor/src/qualcomm/: README.md  jni_bridge.rs  mod.rs  qsee.rs  qsee_comm.rs  secure_channel.rs  stub.rs  trustzone.rs
crypto-tee-vendor/src/samsung/: README.md  jni_bridge.rs  knox.rs  knox_vault.rs  mod.rs  stub.rs  trustzone.rs
crypto-tee-vendor/src/simulator/: apple.rs  attestation.rs  base.rs  errors.rs  mod.rs  qualcomm.rs  samsung.rs  secure_storage.rs  tests.rs
crypto-tee-vendor/tests/: security_tests.rs  vendor_integration_tests.rs
crypto-tee/audit_logs/: crypto-tee-audit.jsonl
crypto-tee/benches/: optimized_performance.rs  performance_tests.rs
crypto-tee/examples/: audit_logging_demo.rs  health_monitoring_demo.rs  key_rotation_demo.rs
crypto-tee/src/: error.rs  health.rs  keys.rs  lib.rs  rotation.rs  types.rs
crypto-tee/src/audit/: logger.rs  mod.rs  storage.rs
crypto-tee/src/backup/: export.rs  mod.rs  recovery.rs  storage.rs
crypto-tee/src/core/: api.rs  manager.rs  mod.rs
crypto-tee/src/plugins/: mod.rs
crypto-tee/tests/: audit_integration_test.rs  comprehensive_tests.rs  hardware_integration_tests.rs  integration_tests.rs
crypto-tee/tests/helpers/: mod.rs  test_keys.rs  test_scenarios.rs
docs/: API_GUIDE.md  CryptoTEE-Architecture-Design.md  PUBLISHING.md  audit-logging.md  custom.css  header.html  index.html
docs-dev/: Overview.md  arch-thinking.md  cross-platform-tee-sdk.md  final.md  platform-tee-sdk.md
examples/: README.md  apple_secure_enclave.rs  auth_required.rs  basic_key_management.rs  http_signatures.rs  multi_platform.rs  plugin_development.rs  samsung_knox_vault.rs  signing_verification.rs
scripts/: performance_analysis.rs  pre-publish-check.sh  publish.sh  security_scan.sh
