[package]
name = "crypto-tee-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-specific adapters for CryptoTEE"
keywords = ["crypto", "tee", "platform", "android", "ios"]
categories = ["cryptography", "os"]

[dependencies]
crypto-tee-vendor = { path = "../crypto-tee-vendor", features = ["software-fallback"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }

[features]
default = []

# Platform-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk = { workspace = true }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = { workspace = true }
security-framework = { workspace = true }