[package]
name = "crypto-tee-vendor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Vendor-specific TEE implementations for CryptoTEE"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
async-trait = { workspace = true }
ring = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
tokio = { workspace = true, features = ["sync", "time"] }
rand = "0.8"

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }

[features]
default = []
software-fallback = []
simulator = []
samsung = ["simulator"]
apple = ["simulator"]
qualcomm = ["simulator"]

# Platform-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true, optional = true }
ndk = { workspace = true, optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = { workspace = true, optional = true }
security-framework = { workspace = true, optional = true }